# Image_Processing

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  base_proc.cpp  base_proc.h  image_cli.cpp  image_ops.cpp  image_ops.h  main.cpp  mainwindow.ui
img_proc/: base_proc.cpp  base_proc.h
lib/opencv/: OpenCVConfig.cmake  OpenCVModules.cmake
lib/opencv/Debug/: opencv_world460d.exp  opencv_world460d.lib
lib/opencv/Release/: opencv_world460.exp  opencv_world460.lib
